# h41

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Casks/: h41.rb  h41.rb.template
Formula/: h41.rb  h41.rb.template
Scoop/: h41.json  h41.json.template
assets/: index.html
scripts/: update-formula.sh
src/: lib.rs  main.rs  ports.rs  server.rs  tui.rs
